--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./Logito.ico">
+    <link rel="icon" type="image/x-icon" href="../logo/Logito.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <title>LocalMe</title>
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('./Patron.png');
+            background-image: url('../logo/Patron.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -145,7 +145,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="logo">
-            <img src="./Logo.png" alt="Logo">
+            <img src="../logo/Logo.png" alt="Logo">
         </div>
         <div class="menu">
             <a href="#">Crear Post</a>
