--- a/src/app/administracion/administracion.component.html
+++ b/src/app/administracion/administracion.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../../logo/Logito.png">
+    <link rel="icon" type="image/x-icon" href= "assets/logo/logito.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>LocalMe</title>
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('../../logo/Patron.png');
+            background-image: url('assets/logo/patron.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -162,7 +162,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="logo">
-            <img src="../../logo/Logo.png" alt="Logo">
+            <img src="assets/logo/logo.png" alt="Logo">
         </div>
         <div class="menu">
             <div class="user-dropdown">
