--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="icon" type="image/x-icon" href="../../logo/Logito.png">
+  <link rel="icon" type="image/x-icon" href="assets/logo/logito.png">
 
   <!-- Incluimos Bootstrap desde el CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     /* Imagen de fondo responsiva */
     body {
-      background-image: url('../../logo/Patron.png');
+      background-image: url('assets/logo/patron.png');
       background-size: cover;    /* La imagen cubre toda el área de la pantalla */
       background-position: center; /* Centra la imagen */
       background-attachment: fixed; /* Fija la imagen al fondo */
