--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-registrarse></app-registrarse>
-
+<app-inicio-sesion></app-inicio-sesion>
+<app-pagina-main></app-pagina-main>
+<app-administracion></app-administracion>
 
 <router-outlet />
